Simplify execution of scripts to build jlink/jpackage